welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: '<-' expected but ')' found.
    for (l<--10 to 10)
                     ^has271:7: error: illegal start of simple expression
  }
  ^