welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  var n=0
  for (i<- 0 to nums.length-3){
    for (l<--10 to 10)
    if (nums(i)==2+l && nums(i+1)==7+l && nums(i+2)==1+l)
    n=n+1
  }
  if (n>0)
  return true
  else
  return false
}